metadatafullcopy/unpackaged/objects/Approval_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Column_1__c</fullName>
        <label>Column 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_2__c</fullName>
        <label>Column 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_3__c</fullName>
        <label>Column 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Approval Configuration</label>
    <pluralLabel>Approval Configurations</pluralLabel>
</CustomObject>